--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,9 @@
     font-family: "Raleway", sans-serif;
 }
 
+.seat-numbers{
+    display:  flex;
+    gap: 15px;
+    padding-bottom: 10px;
+    justify-content: space-around;
+}
